<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/profileFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="io.github.asutorufa.yuhaiin.ProfileFragment"
        android:label="@string/yuhaiin"
        android:transitionName="transtion_name_example">
        <action
            android:id="@+id/action_profileFragment_to_appListFragment"
            app:destination="@+id/appListFragment" />
        <action
            android:id="@+id/action_profileFragment_to_webViewFragment"
            app:destination="@+id/webViewFragment" />
    </fragment>

    <fragment
        android:id="@+id/webViewFragment"
        android:name="io.github.asutorufa.yuhaiin.WebviewFragment"
        android:label="Yuhaiin" />
    <fragment
        android:id="@+id/appListFragment"
        android:name="io.github.asutorufa.yuhaiin.AppListDialogFragment"
        android:label="@string/adv_app_list_title" />
</navigation>
